Ensure the gird is turned block when too small.

--- a/src/components/curation-data/curationData.scss
+++ b/src/components/curation-data/curationData.scss
@@ -10,7 +10,7 @@ dd {
   &-container {
     margin: 1%;
     @media screen and (max-width: $sm-break) {
-      display: block;
+      display: block !important;
       margin: 0 auto;
       width: 80%;
     }
